--- a/AntiquerChain/AntiquerChain.csproj
+++ b/AntiquerChain/AntiquerChain.csproj
@@ -10,4 +10,10 @@
     <PackageReference Include="Utf8Json" Version="1.3.7" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="BouncyCastle.Crypto">
+      <HintPath>DLL\BouncyCastle.Crypto.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
